--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -40,12 +40,14 @@
     padding: 2rem;
     position:absolute;
     right:15%;
+    bottom:30%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   }
 
   .login-text {
     position:absolute;
     right:40%;
+    bottom:45%;
     font-size: 500%;
   }
   
